Corrigindo erro nos ícones

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genshinflix Brasil</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/genshin_icon_eEs_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <script src="https://kit.fontawesome.com/3a50bf9dc9.js" crossorigin="anonymous"></script>
 
@@ -36,11 +36,11 @@
                         <div class="three"></div>
                     </div>
                     <nav class="container2">
-                        <a href="#"><img src="https://www.iconsdb.com/icons/download/white/magnifying-glass-3-24.ico" alt="magnifying-glass" ></a>
+                        <a href="#"><img src="img/magnifying-glass-3-24.ico" alt="magnifying-glass" ></a>
                         <a href="#">Infantil</a>
-                        <a href="#"><img src="https://www.iconsdb.com/icons/download/white/gift-4-24.ico" alt="gift"></a>
-                        <a href="#"><img src="https://www.iconsdb.com/icons/download/white/bell-3-24.ico" alt="bell"></a>
-                        <a href="#"><img src="https://www.iconsdb.com/icons/download/white/emoticon-24-24.ico" alt="profile"></a>
+                        <a href="#"><img src="img/gift-4-24.ico" alt="gift"></a>
+                        <a href="#"><img src="img/bell-3-24.ico" alt="bell"></a>
+                        <a href="#"><img src="img/emoticon-24-24.ico" alt="profile"></a>
                     </nav>
                 </nav>
             </div>
@@ -58,8 +58,8 @@
                     <p>Uma aventura imersiva single player.<p>
                     <p>Como um viajante do outro mundo, você irá partir para uma jornada para encontrar a si mesmo e se reunir com o seu ente perdido.<p>
                     <div class="botoes">
-                            <a href="https://genshin.mihoyo.com/pt/download" target="_blank"><button role="button" class="botao"><img src="https://www.iconsdb.com/icons/download/white/data-transfer-download-16.ico" alt="download">  Baixar</button></a>
-                            <a href="https://genshin.mihoyo.com/pt/" target="_blank"><button role="button" class="botao"><img src="https://www.iconsdb.com/icons/download/white/plus-7-16.ico" alt="plus">  Mais Sobre</button></a>
+                            <a href="https://genshin.mihoyo.com/pt/download" target="_blank"><button role="button" class="botao"><img src="img/data-transfer-download-16.ico" alt="download">  Baixar</button></a>
+                            <a href="https://genshin.mihoyo.com/pt/" target="_blank"><button role="button" class="botao"><img src="img/plus-7-16.ico" alt="plus">  Mais Sobre</button></a>
                     </div>
                 </div>
             </div>
